Improve CV text: combine and refactor experience bullet points

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                     <div class="timeline-role">Embedded Engineer (Drivers)</div>
                     <ul>
                       <li>Development and maintenance of drivers for <a href="https://www.hilscher.com/products/netx-90" target="_blank">netX90</a></li>
-                      <li>Creating UART API for all drivers</li>
-                      <li>Creating automated Python testing system for all drivers</li>
+                      <li>Designed unified UART API and built automated Python-based testing framework for all drivers</li>
                     </ul>
                   </div>
                 </div>
@@ -86,10 +85,8 @@
                     <div class="timeline-role">Custom Application Firmware Engineer</div>
                     <ul>
                       <li>Working on a <b>custom application firmware</b> for <a href="https://www.wago.com" target="_blank">WAGO</a>, especially for the <a href="https://www.wago.com/global/i-o-systems/io-link" target="_blank">IO-Link</a> range of industrial slave products (I/O modules, sensor/actuator connectivity, etc.).</li>
-                      <li>Develop, maintain, and test application firmware.</li>
-                      <li>Develop, maintain, and test the UI (static React app hosted on the netX90).</li>
-                      <li>Implementing firmware for new hardware variants</li>
-                      <li>Implement inter‑core communication via UART</li>
+                      <li>Full lifecycle development of application firmware and embedded React UI hosted on the netX90</li>
+                      <li>Porting firmware to new hardware variants and implementing inter-core UART communication</li>
                       <li>IO‑Link device functionality, real‑time sensor/actuator data acquisition, signal processing, diagnostics</li>
                       <li>Integration with PROFINET, EtherNet/IP, and EtherCAT stacks</li>
                       <li>Firmware on FreeRTOS with MQTT and OPC UA connectivity</li>
