--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <ul>
                       <li>Completed intensive onboarding program focused on ARM Cortex-M microcontrollers and STM32 platform</li>
                       <li>Studied:
-                        <a href="https://www.arm.com/resources/education/books/fundamentals-of-system-on-chip-design-on-arm-cortex-m-microcontrollers" target="_blank">Fundamentals of System-on-Chip Design on Arm Cortex-M Microcontrollers</a>
-                        and
-                        <a href="https://www.amazon.com/Mastering-STM32-step-complete-development/dp/197759337X" target="_blank">Mastering STM32: A step-by-step guide to the most complete ARM Cortex-M platform</a>
+                        <a href="https://github.com/arm-university/Fundamentals-of-System-on-Chip-Design-on-Arm-Cortex-M-Microcontrollers" target="_blank">Fundamentals of System-on-Chip Design on Arm Cortex-M Microcontrollers</a>
+                        <span style="color: #888; margin: 0 8px;">|</span>
+                        <a href="https://www.scribd.com/document/567413628/Mastering-stm32-book-2nd-edition" target="_blank">Mastering STM32: A step-by-step guide to the most complete ARM Cortex-M platform</a>
                       </li>
                     </ul>
                   </div>
@@ -74,7 +74,7 @@
                   <div class="timeline-content">
                     <div class="timeline-role">Embedded Engineer (Drivers)</div>
                     <ul>
-                      <li>Development and maintenance of drivers for <a href="https://www.hilscher.com/products/netx-90" target="_blank">netX90</a></li>
+                      <li>Development and maintenance of drivers for <a href="https://www.hilscher.com/products/multiprotocol-socs-stacks/multiprotocol-socs/netx-90" target="_blank">netX90</a></li>
                       <li>Designed unified UART API and built automated Python-based testing framework for all drivers</li>
                     </ul>
                   </div>
@@ -89,7 +89,7 @@
                       <li>Porting firmware to new hardware variants and implementing inter-core UART communication</li>
                       <li>IO‑Link device functionality, real‑time sensor/actuator data acquisition, signal processing, diagnostics</li>
                       <li>Integration with PROFINET, EtherNet/IP, and EtherCAT stacks</li>
-                      <li>Firmware on FreeRTOS with MQTT and OPC UA connectivity</li>
+                      <li>Firmware on FreeRTOS with MQTT, OPC UA, and Bluetooth connectivity</li>
                       <li>Integrate C Unity tests via Docker for automated firmware testing</li>
                     </ul>
                   </div>
