Improve skill section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,39 @@
             <div class="tech-stack"><strong>Tech:</strong> C++, MFC, Microsoft SQL, C#, .NET Web APIs, SOAP, REST</div>
           </div>
         </div>
+
+        <div class="job">
+          <div class="job-header">
+            <div>
+              <div class="job-title">Marketing Trainee</div>
+              <div class="job-company"><a href="https://www.icard.com" target="_blank">iCard</a> · Varna, Bulgaria</div>
+            </div>
+            <div class="job-date">Jun 2018 – Sep 2018</div>
+          </div>
+          <div class="job-body">
+            <ul>
+              <li>Developed social media presence for the iCard digital wallet</li>
+              <li>Organized company teambuilding events</li>
+              <li>Collaborated with Marketing Manager on iCard × Startup Weekend Varna partnership</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="job">
+          <div class="job-header">
+            <div>
+              <div class="job-title">LEGO Robotics Teacher</div>
+              <div class="job-company">Robopartans OOD · Varna, Bulgaria</div>
+            </div>
+            <div class="job-date">Jun 2017 – Jan 2018</div>
+          </div>
+          <div class="job-body">
+            <ul>
+              <li>Certified LEGO Robotics Teacher — taught programming and robotics to students</li>
+              <li>Participated in training activities and public demonstrations</li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <!-- Technical Skills -->
