--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="summary-section">
       <p class="summary">
-        Passionate embedded, electronics & automation technologist with 6+ years from low-level firmware to full-stack development. I build smart devices, prototype fast, and love tough problems - tech is my playground.
+        Passionate software engineer focused on embedded systems and electronics with 6+ years from low-level firmware to full-stack development. I build smart devices, prototype fast, and love tough problems - tech is my playground.
       </p>
       <div class="summary-divider"></div>
     </div>
