Fix header in mobile. Change background colors. Add technical skill agenda. Change the transition between different sections. Add age.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header-content">
           <div class="header-info">
             <h1>Mladen Nikolov</h1>
-            <p class="title-bar">Senior Firmware Developer</p>
+            <p class="title-bar">Senior Firmware Developer · 28 years old</p>
           </div>
           <address class="contact-info" aria-label="Contact information">
             <a class="contact-item" href="mailto:mladen.nikolow@gmail.com" aria-label="Email">
@@ -216,6 +216,10 @@
       <!-- Technical Skills -->
       <section class="section-full skills">
         <h3 class="section-title">💻 Technical Skills</h3>
+        <div class="skills-legend">
+          <span class="legend-item"><span class="legend-dot primary"></span> Primary Skill</span>
+          <span class="legend-item"><span class="legend-dot secondary"></span> Secondary Skill</span>
+        </div>
         <div class="skills-grid">
           <div class="skill-category">
             <div class="skill-cat-title">Core Languages</div>
@@ -231,10 +235,10 @@
             <div class="skill-tags">
               <span class="skill-tag primary">ARM Cortex-M</span>
               <span class="skill-tag primary">FreeRTOS</span>
+              <span class="skill-tag primary">ESP32</span>
               <span class="skill-tag">UART</span>
               <span class="skill-tag">I2C</span>
               <span class="skill-tag">SPI</span>
-              <span class="skill-tag">ESP32</span>
               <span class="skill-tag">Raspberry Pi</span>
               <span class="skill-tag">Arduino</span>
             </div>
@@ -244,7 +248,7 @@
             <div class="skill-tags">
               <span class="skill-tag primary">OPC UA</span>
               <span class="skill-tag primary">MQTT</span>
-              <span class="skill-tag">IO-Link</span>
+              <span class="skill-tag primary">IO-Link</span>
               <span class="skill-tag">Profinet</span>
               <span class="skill-tag">Ethernet/IP</span>
               <span class="skill-tag">EtherCAT</span>
